fixed a corner case